--- a/angular/src/app/components/dashboard/dashboard.component.html
+++ b/angular/src/app/components/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
             <!-- {{diagnostic}} -->
         </div>
         <div class="panel-body">
-            <form class="form-horizontal" (ngSubmit)="NewProduct()" role="form" #ProductForm="ngForm">
+            <form class="form-horizontal"  role="form" #ProductForm="ngForm">
               <div class="form-group">
                 <label for="inputEmail3" class="col-sm-2 control-label">Name</label>
                 <div class="col-sm-10">
@@ -45,7 +45,7 @@
               </div>
               <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
-                  <button type="submit" class="btn btn-primary" >{{button}}</button>
+                  <button type="submit" class="btn btn-primary" (click)="NewProduct();ProductForm.reset();" [disabled]="!ProductForm.form.valid">{{button}}</button>
                 </div>
               </div>
             </form>
