--- a/templates/angular/index.html
+++ b/templates/angular/index.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <base href="/">
-    <title>Kumar Medical Store</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/assets/css/bootstrap.min.css">
-    <link href="/static/assets/css/styles.css" rel="stylesheet">
-  </head>
-  <body>
-    <app-root>
-    </app-root>
-  <script type="text/javascript" src="/static/inline.bundle.js"></script><script type="text/javascript" src="/static/polyfills.bundle.js"></script><script type="text/javascript" src="/static/styles.bundle.js"></script><script type="text/javascript" src="/static/vendor.bundle.js"></script><script type="text/javascript" src="/static/main.bundle.js"></script></body>
-  <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-
-</html>
+<!DOCTYPE html><html><head><base href="/"><title>Kumar Medical Store</title><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="/static/assets/css/bootstrap.min.css"><link href="/static/assets/css/styles.css" rel="stylesheet"><link href="/static/styles.d41d8cd98f00b204e980.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="/static/inline.3feb72802ae28415e66d.bundle.js"></script><script type="text/javascript" src="/static/polyfills.c9b879328f3396b2bbe8.bundle.js"></script><script type="text/javascript" src="/static/vendor.1592494dfeaf015c7f1b.bundle.js"></script><script type="text/javascript" src="/static/main.57e71389758e1a753243.bundle.js"></script></body><script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script></html>
