--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -4,7 +4,7 @@
            <div class="col-md-5">
               <!-- Logo -->
               <div class="logo">
-                 <h1><a href="/dashboard">Dashboard</a></h1>
+                 <h1><a >Kumar Medical Store</a></h1>
               </div>
            </div>
            <div class="col-md-5">
