--- a/angular/src/app/components/dashboard/dashboard.component.html
+++ b/angular/src/app/components/dashboard/dashboard.component.html
@@ -26,7 +26,7 @@
               <div class="form-group">
                 <label class="col-sm-2 control-label">Trader</label>
                 <div class="col-sm-10">
-                  <textarea class="form-control" [(ngModel)]="product.trader" name="trader" placeholder="Textarea" rows="3"></textarea>
+                  <input class="form-control" type="text" [(ngModel)]="product.trader" name="trader" placeholder="Trader" >
                 </div>
               </div>
               <div class="form-group">
