edit, delete added

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -37,7 +37,7 @@
             </ul>
          </div>
       </div>
-  <div class="col-md-8 col-md-offset-1">
+  <div class="col-md-9">
     <div class="row">
         <router-outlet></router-outlet>
 
