--- a/angular/src/assets/css/styles.css
+++ b/angular/src/assets/css/styles.css
@@ -620,3 +620,11 @@ body {
 a{
     cursor: pointer;
 }
+
+input[type=date]::-webkit-inner-spin-button, 
+input[type=date]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
