--- a/angular/src/app/components/dashboard/dashboard.component.html
+++ b/angular/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,8 @@
+  <div class="col-sm-10">
+    
     <div class="content-box-large">
         <div class="panel-heading">
             <div class="panel-title">Add New Product</div>
-            <!-- {{diagnostic}} -->
         </div>
         <div class="panel-body">
             <form class="form-horizontal"  role="form" #ProductForm="ngForm">
@@ -33,14 +34,18 @@
                 <label class="col-sm-2 control-label">Price Rate</label>
                 <div class="col-sm-10">
                     <input type="number" class="form-control"name="price_rate" [(ngModel)]="product.price" placeholder="Price Rate">
-
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="col-sm-2 control-label">Discount</label>
+                <div class="col-sm-10">
+                    <input type="number" class="form-control" name="discount" [(ngModel)]="product.discount" placeholder="Discount">
                 </div>
               </div>
               <div class="form-group">
                   <label class="col-sm-2 control-label">Date</label>
                   <div class="col-sm-10" >
-                        <!-- <input type="date"  name="date" class="form-control" [(ngModel)]="product.date"> -->
-                        <my-date-picker name="date" [options]="myDatePickerOptions" [(ngModel)]="product.date" required></my-date-picker>
+                    <input name="date" class="form-control" pattern="[0-9]{4}-[0-9]{2}-[0-9]{2}" type="date" [(ngModel)]="product.date">
                   </div>
               </div>
               <div class="form-group">
@@ -51,4 +56,5 @@
             </form>
         </div>
     </div>
+  </div>
     <simple-notifications [options]="options"></simple-notifications>
